# Engine

./: .gitignore  .gitmodules  CMakeLists.txt
Assets/Shaders/SPIR-V/: hello_vulkan.frag
Frameworks/: CMakeLists.txt
Frameworks/Common/: CMakeLists.txt  GfxConfiguration.hpp  Portable.hpp  SceneObject.cpp  SceneObject.hpp  baseApplication.cpp  baseApplication.hpp  base_application.cpp  base_application.hpp  glfwApplication.cpp  glfwApplication.hpp  graphicsManager.cpp  graphicsManager.hpp  main.cpp
Frameworks/Interface/: IAppliction.hpp  IRuntimeModule.hpp  appliction.hpp  runtimeModule.hpp
Glfw/: glfwApplication.cpp  glfwApplication.hpp
Platform/: CMakeLists.txt
Platform/GLFW/: CMakeLists.txt  EmptyApp.cpp  GlfwApplication.cpp  GlfwApplication.hpp  VulkanApp.cpp
RHI/: CMakeLists.txt
RHI/OpenGL/: CMakeLists.txt  openGLApplication.cpp  openGLApplication.hpp
RHI/Vulkan/: CMakeLists.txt  VulkanGraphicsManager.cpp  VulkanGraphicsManager.hpp  helloVulkan.cpp  utils.hpp  vulkanApplication.cpp  vulkanApplication.hpp
